@@ -6,7 +6,8 @@ muzzle {
   pass {
     group.set("org.apache.dubbo")
     module.set("dubbo")
-    versions.set("[2.7.0,)")
+    versions.set("[2.7,)")
+    assertInverse.set(true)
   }
 }
 
@@ -21,7 +22,9 @@ dependencies {
 }
 
 tasks.withType<Test>().configureEach {
+  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
   // to suppress non-fatal errors on jdk17
   jvmArgs("--add-opens=java.base/java.math=ALL-UNNAMED")
-  jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
+  // required on jdk17
+  jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
 }
